--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "my-funciton",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/renovatorNO1/deploy_node_js_on_aws_lambda.git"
+  },
+  "bugs": {
+    "url": "https://github.com/renovatorNO1/deploy_node_js_on_aws_lambda/issues"
+  },
+  "homepage": "https://github.com/renovatorNO1/deploy_node_js_on_aws_lambda#readme",
+  "description": ""
 }
